# whoop-mcp

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  fly.toml  pyproject.toml
.github/workflows/: deploy.yml
scripts/: refresh_token.py
src/whoop_mcp/: auth.py  client.py  server.py
tests/: conftest.py  test_client.py  test_server.py
